fix progress bar z-index

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -147,6 +147,7 @@ $max_font: 22px;
     width: calc(100% - 50px);
     height: 3px;
     box-sizing: border-box;
+    z-index: 10;
     .header-progress {
       position: absolute;
       left: 0;
